--- a/blogs/templates/blogs/home.html
+++ b/blogs/templates/blogs/home.html
@@ -82,7 +82,7 @@ Home
         {% endif %}
         <!-- Pager -->
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="{% url 'blogs:index' %}">All Blogs &rarr;</a>
+          <a class="btn btn-primary float-right" href="{% url 'blogs:search' %}">search &rarr;</a>
         </div>
       </div>
     </div>
