--- a/blogs/templates/blogs/index.html
+++ b/blogs/templates/blogs/index.html
@@ -14,7 +14,7 @@ All Blogs
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1 style="margin-top: -90px;">All Blogs</h1>
+            <h1>All Blogs</h1>
           </div>
         </div>
       </div>
