--- a/blogs/templates/profiles/profile_create.html
+++ b/blogs/templates/profiles/profile_create.html
@@ -18,7 +18,7 @@ Edit Profile
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'blogs:blog-add' %}" style="color: white;">Create New Blog</a>
+            <a class="nav-link" href="{% url 'blogs:blog-add' %}" style="color: white;">Post New Blog</a>
           </li>
           
           {% if user.is_authenticated %}
